--- a/index.css
+++ b/index.css
@@ -593,3 +593,110 @@ body {
   line-height: 119.3%;
   color: #C6C6C6;
 }
+
+.accesories-button-see-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 229px;
+  height: 48px;
+  margin: 50px auto;
+  background: #009EFF;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.impressive-features {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: auto;
+  background: #F5F5F5;
+}
+
+.scooter-riding {
+  display: flex;
+  align-items: end;
+  width: 1376px;
+  height: 724px;
+  background-image: url(/images/impressive-features/scooter-riding.jpg);
+}
+
+.scooter-riding-image-transparency {
+  width: 1376px;
+  height: 212px;
+  background: linear-gradient(360deg, #F5F5F5 19.44%, rgba(232, 232, 232, 0) 100%);
+}
+
+.impressive-features-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 545px;
+  height: 60px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 119.3%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #323941;
+}
+
+.impressive-features-field {
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 70px;
+}
+
+.impressive-features-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.impressive-features-cell-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 160px;
+  height: 120px;
+}
+
+.impressive-features-cell-value {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 43px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 35px;
+  line-height: 43px;
+  background: linear-gradient(180deg, #009EFF 0%, #007BCD 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.impressive-features-cell-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #999999;
+}
