--- a/index.css
+++ b/index.css
@@ -1185,3 +1185,152 @@ body {
   text-transform: uppercase;
   color: #FFFFFF;
 }
+
+.compare-specifications {
+  position: relative;
+  display: grid;
+  width: 1376px;
+  justify-content: center;
+  color: #FFFFFF;
+}
+
+.compare-specifications-header {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 61px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #323941;
+  margin-top: 94px;
+
+}
+
+.select-model {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #323941;
+}
+
+.compare-table {
+  width: 1060px;
+  display: grid;
+  column-gap: 5px;
+  row-gap: 5px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.compare-table-cell {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #323941;
+}
+
+.compare-table-subheader {
+  grid-column: 1/5;
+  text-align: left;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #009EFF;
+  margin-top: 16px;
+}
+
+.subheader-container {
+  display: grid;
+  grid-template-columns: 1fr 30fr;
+}
+
+.subheader-line {
+  position: relative;
+  grid-column: 1/3;
+  height: 5px;
+}
+.subheader-line img {
+  position: absolute;
+  left: -16px;
+}
+
+.compare-table-scooter-image {
+  /* align-items: end; */
+}
+
+.compare-table-cell-model {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #323941;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.compare-table-cell-price {
+  width: 187px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 23px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #323941;
+  margin-top: 60px;
+  margin-bottom: 10px;
+}
+
+.compare-table-cell-buy-button {
+  display: grid;
+  width: 187px;
+  height: 46px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  background: #009EFF;
+  color: #FFFFFF;
+}
+
+.compare-specifications-gradient {
+  position: absolute;
+  width: 451px;
+  height: 1477px;
+  left: 927px;
+  top: 180px;
+  background: linear-gradient(270deg, #FFFFFF 53.9%, rgba(255, 255, 255, 0) 100%);
+}
+
+.button-right {
+  position: absolute;
+  left: calc(100% - 70px);
+  top: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.bottom-space {
+  width: 1376px;
+  height: 400px;
+  color: #FFFFFF;
+}
