--- a/index.css
+++ b/index.css
@@ -1303,7 +1303,7 @@ body {
 .compare-specifications-gradient {
   position: absolute;
   width: 451px;
-  height: 1477px;
+  height: 1387px;
   left: 927px;
   top: 180px;
   background: linear-gradient(270deg, #FFFFFF 53.9%, rgba(255, 255, 255, 0) 100%);
@@ -1315,16 +1315,107 @@ body {
   top: 50%;
 }
 
+.gift {
+  display: flex;
+  width: 1376px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+}
 
+.gift-container {
+  display: flex;
+  flex-direction: row;
+  width: 1080px;
+  height: 246px;
+  justify-items: center;
+  justify-content:space-around;
+  align-items: center;
+  border: 5px solid #009EFF;
+}
 
+.gift-offer {
+  display: flex;
+  flex-direction: column;
 
+}
 
+.gift-header {
+  width: 527px;
+  height: 120px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 119.3%;
+  text-transform: uppercase;
+  color: #323941;
+}
 
+.gift-description {
+  width: 504px;
+  height: 44px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #323941;
+}
 
+.reviews {
+  width: 1376px;
+  height: 750px;
+  background: #F5F5F5;
+}
 
+.reviews-header {
+  padding-top: 64px;
+  padding-bottom: 38px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 119.3%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #323941;
+}
 
+.reviews-container {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 900px;
+  height: 500px;
+  margin: auto;
+}
 
+.review {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 275px;
+  height: 487px;
+  background: #FFFFFF;
+  border: 3px solid #009EFF;
+}
 
+.reviews-left-button {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: calc(50% - 35px);
+  left: -74px;
+}
+
+.reviews-right-button {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: calc(50% - 35px);
+  right: -74px;
+}
 
 
 
@@ -1332,5 +1423,5 @@ body {
 .bottom-space {
   width: 1376px;
   height: 400px;
-  color: #FFFFFF;
+  background-color: #9dfcdf;
 }
