--- a/index.css
+++ b/index.css
@@ -196,6 +196,7 @@ body {
   border: 2px solid #6ACD68;
   font-size: 13px;
   color: #6ACD68;
+  margin: 10px;
 }
 
 .offer-name {
@@ -292,7 +293,7 @@ body {
 .payment-methods-description {
   margin: 0;
   padding: 0;
-  margin-top: 16px
+  margin-top: 24px
 }
 
 .payment-methods-at {
@@ -1473,7 +1474,57 @@ body {
   align-items: center;
 }
 
+.special-offer-repeat {
+  position: relative;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 1376px;
+  height: 700px;
+  /* background-color: khaki; */
+}
 
+.special-offer-repeat-container {
+margin-left: 200px;
+}
+
+.in-stock-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 89px;
+  height: 27px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 119.3%;
+  border: 2px solid #6ACD68;
+  color: #6ACD68;
+  margin: 10px;
+}
+
+.special-offer-repeat-header {
+  width: 928px;
+  height: 282px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 108px;
+  line-height: 94px;
+  text-transform: uppercase;
+  color: #323941;
+}
+
+.special-offer-repeat-image-1 {
+  position: absolute;
+  left: 925px;
+  top: 280px;
+}
+
+.special-offer-repeat-image-2 {
+  position: absolute;
+  left: 590px;
+  top: 246px;
+}
 
 
 .bottom-space {
